# smc-engine

./: .coverage  .env.example  .gitignore  README.md  config.yaml.example  pyproject.toml
backtest/: _utils.py  harness.py  metrics.py  position_manager.py  report.py  walk_forward.py
data/: fetch.py  resample.py
examples/: btc_trades.csv  export_pine_config.py  run_btc.py  run_live.py  smoke_test.py
handoff/: MINIMAX_HANDOFF.md  calibration-results-2026-05-21.csv  p1_baseline.csv  sweep-P1.csv  sweep-P2.csv  sweep-P3.csv
scripts/: analyze_combined.py  analyze_signals.py  analyze_trades.py  calibration_sweep.py  daily_digest.sh  kill_switch_reset.py  kill_switch_reset.sh  reconcile_check.py
smc_engine/: config.py  orchestrator.py  risk_guard.py  setup_builder.py  time_utils.py  types.py
tests/: conftest.py  test_account_state_live.py  test_analyze_signals.py  test_atr_regime_integration.py  test_atr_regime_types.py  test_audit_log.py  test_backtest_e2e.py  test_binance_adapter.py  test_binance_client.py  test_binance_order_client.py  test_calibration_sweep.py  test_config.py  test_config_atr_regime.py  test_config_bias_ema.py  test_daily_digest_script.py  test_execution_base.py  test_execution_integration.py  test_fetch.py  test_fixtures.py  test_harness.py  test_imbalance_detector.py  test_integrations_base.py  test_kill_switch.py  test_level_detector.py  test_liquidity_detector.py  test_live_runner.py  test_mainnet_guard.py  test_metrics.py  test_orchestrator.py  test_orchestrator_bias.py  test_order_manager.py  test_pine_config_export.py  test_r2a_atr.py  (+34 more)
(+68 files in other folders)
